--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -55,16 +55,14 @@ function SwitchMenu(obj,sty)
 		<ul class="submenu" id="sub5" >
 			<li><a href="?c=user&a=listUser" target='main'>用户查询</a></li>
 			<li><a href="?c=user&a=pageUsers" target='main'>用户列表</a></li>
-			<li><a href="/user/frame.php?c=public&a=registerForm&at=1" target='main'>注册用户</a></li>
-				
 		</ul>
-
-	<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu"><ol id="p6">虚拟主机</ol>	</h1>
+	<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu"><ol id="p6">虚拟主机/cdn</ol>	</h1>
 		<ul class="submenu" id="sub6" >
-			<li><a href="?c=vhost&a=pageVhost" target='main'>虚拟主机列表</a></li>	
+			<li><a href="?c=vhost&a=pageVhost" target='main'>用户列表</a></li>	
+			<li><a href="?c=vhost&a=pageVhostByExpire_time&day=1" target='main'>过期列表</a></li>	
 			<li><a href="?c=vhostproduct&a=showProduct" target='main'>产品列表</a></li>	
 			<li><a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a></li>
-			<li><a href="?c=vhost&a=pageVhostByExpire_time&day=1" target='main'>过期虚拟主机</a></li>	
+			
 		</ul>
  	
 	<h1 id="m11" onClick="SwitchMenu('sub11','m11')" class="menu"><ol id="p11">非自动化产品</ol>	</h1>
