--- a/user/view/default/host/index.html
+++ b/user/view/default/host/index.html
@@ -1,5 +1,5 @@
 <div class="wid_menu_vh">
-  <table width="750" border="0" cellpadding="0" cellspacing="0" align="center">
+  <table id="table_r" cellpadding="0" cellspacing="0" align="center">
   	  <tr>
 		<td colspan="2" background="{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
 			当前位置 : <a href="/">首页</a> >> <a href="?c=host&a=index">虚拟主机</a>
