--- a/admin/view/default/setting/setup.html
+++ b/admin/view/default/setting/setup.html
@@ -32,6 +32,10 @@
         <td class="td_bgc right_2">
         <textarea name='stat_code'  rows='5' cols='50'>{{$setting.stat_code.value}}</textarea></td>
       </tr>
+      <tr>
+        <td bgcolor='#efefef' class='color01 right'>虚拟主机名字定义</td>
+        <td class="td_bgc right_2"><input name='vhost_name' size="50"  value='{{$setting.vhost_name.value}}'/></td> 
+      </tr>
 	   <tr>
         <td colspan="2" bgcolor='#efefef' class='color01 center td_hg' align="center"><input type="submit" value="确认" /></td>
        </tr>
