--- a/user/view/default/vhostproduct/renew.html
+++ b/user/view/default/vhostproduct/renew.html
@@ -14,7 +14,7 @@ function check_user()
 <div class="wid_ri r_mar" ><img src="{{$STATIC}}style/use_cio.jpg" width="750" height="85"  border="0"/></div>
 <div class="wid_ri r_mar" align="right">
 	<table id="table_ri" cellpadding="0" cellspacing="1">
-		<tr><td colspan="2">续费虚拟主机产品</td></tr>
+		<tr><td colspan="2">续费产品</td></tr>
 		<tr>
 			<td class="td_bgc right_2">用户名</td>
 			<td class="td_bgc right_2">{{$name}}</td>
