--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -4,7 +4,7 @@
 		 	  	<!--幻灯片开始-->
 			<div class="right_main">
 				<div class="left_box right_top right_wid2">
-					<table border="0" cellpadding="0" cellspacing="0" width="260">
+					<table border="0" cellpadding="0" cellspacing="0">
 						<tr>
 							<td valign="top">
 								<div class="picshow_main" style="z-index:10">
