--- a/admin/view/default/mproduct/addfrom.html
+++ b/admin/view/default/mproduct/addfrom.html
@@ -31,8 +31,10 @@
 				</tr>
 				
 				<tr>
-					<td class="td_bgc right_2">价格(元/年)</td>
-					<td class="td_bgc right_2"><input name="price" type="text" id='tb_wid3'	value="{{$mproduct[0].price/100}}"></td>
+					<td class="td_bgc right_2">价格</td>
+					<td class="td_bgc right_2"><input name="price" type="text" id='tb_wid3'	value="{{$mproduct[0].price/100}}">
+											<font color='red'>(元/年)</font>
+					</td>
 				</tr>
 				
 				<tr>
