--- a/admin/view/default/vhostproduct/showProduct.html
+++ b/admin/view/default/vhostproduct/showProduct.html
@@ -89,7 +89,7 @@ function updateViewResult()
 	        <td class='color01 right' bgcolor='#efefef'>操作</td>
 	        <td class='color01 right' bgcolor='#efefef'>前台显示</td>
 		   	<td class='color01 right' bgcolor='#efefef' width="60">产品ID</td>
-	        <td class='color01 right' bgcolor='#efefef'>产品名称</td>
+	        <td class='color01 right' bgcolor='#efefef'>产品</td>
 	        <td class='color01 right' bgcolor='#efefef'>主机</td>
 			<td class='color01 right' bgcolor='#efefef'>空间(M)</td>
 			<td class='color01 right' bgcolor='#efefef'>数据库(M)</td>
@@ -121,11 +121,11 @@ function updateViewResult()
 				</select>
 				<div id='busy{{$row.id}}'></div>
 			</td>
-			<td class="right">{{$row.web_quota}}</td>
-			<td class="right">{{$row.db_quota}}</td>
+			<td class="right">{{if $row.cdn}}cdn{{else}}{{$row.web_quota}}{{/if}}</td>
+			<td class="right">{{if $row.cdn}}-{{else}}{{$row.db_quota}}{{/if}}</td>
 			<td class="right">{{$row.price/100}}</td>
 			<td class="right">{{$row.domain}}</td>
-			<td class="right">{{if $row.subdir_flag}}允许{{/if}} {{$row.subdir}}</td>
+			<td class="right">{{if $row.cdn}}-{{else}}{{if $row.subdir_flag}}允许{{/if}} {{$row.subdir}}{{/if}}</td>
 			<td class="right">{{$row.templete}}
 				{{if $row.subtemplete}}:{{$row.subtemplete}}{{/if}}
 			</td>
