--- a/user/view/default/vhostproduct/sell.html
+++ b/user/view/default/vhostproduct/sell.html
@@ -32,13 +32,13 @@ function check_register()
   <form name='reg' action="?c=product&a=sell&product_id={{$product.id}}&product_type=vhost" method="post">
 <div class="wid_ri r_mar" align="right">
 <table id="table_ri" cellpadding="0" cellspacing="1">
-	 <tr><td colspan="2" class="red"><b>购买虚拟主机产品</b></td></tr>
+	 <tr><td colspan="2" class="red"><b>购买产品</b></td></tr>
       <tr>
-        <td>产品名称:</td>
+        <td>产品:</td>
         <td>{{$product.name}}</td>
         </tr>
       <tr>
-        <td>FTP用户名:</td>
+        <td>用户名:</td>
         <td><input name="name" type="text" id="name">
 		    <input type="button" name="Submit" value="检测用户名" onClick="check_user()"></td>
       </tr>
@@ -50,7 +50,7 @@ function check_register()
         <td>确认密码:</td>
         <td><input name="passwd2" type="password" id="passwd2"></td>
 	  </tr>
-	  <tr  >
+	  <tr>
         <td>购买时间:</td>
         <td>
         {{if $product.month_flag}}
@@ -60,6 +60,7 @@ function check_register()
 			<input type=radio name=month value=24>2年
 			<input type=radio name=month value=36>3年</td>
 	  </tr>
+	  {{if $product.cdn==0}}
 	  <tr>
         <td>语言引擎:</td>
         <td>
@@ -84,6 +85,13 @@ function check_register()
         <td>数据库大小:</td>
         <td>{{$product.db_quota}}M</td>
 	  </tr>
+	  <!-- 
+	   <tr>
+        <td>允许绑定子目录:</td>
+        <td>{{if $product.subdir_flag==1}}是{{else}}否{{/if}}</td>
+	  </tr>
+	  -->
+	  {{/if}}
 	  <tr>
         <td>域名绑定个数:</td>
         <td>{{if $product.domain==-1}}不限{{else}} {{$product.domain}}个{{/if}}</td>
@@ -92,19 +100,17 @@ function check_register()
         <td>最大连接数:</td>
         <td>{{if $product.max_connect==0}}不限{{else}}{{$product.max_connect}}{{/if}}</td>
 	  </tr>
-	  <tr>
-        <td>允许绑定子目录:</td>
-        <td>{{if $product.subdir_flag==1}}是{{else}}否{{/if}}</td>
-	  </tr>
-	  
+	 
+	<!--   
 	  {{if $product.ftp!=1}}
 	  <tr>
         <td>是否开启ftp:</td>
         <td><font color='red'>否</font></td>
 	  </tr>
 	  {{/if}}
+	  -->
 	  <tr>
-        <td>产品说明:</td>
+        <td>说明:</td>
         <td>{{$product.describe}}</td>
 	  </tr>
 	  
