--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -78,6 +78,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .left_beiban {height:93px;width:262px;}
 .left_service_color{color:red;}
 .left_hg{height:140px;}
+.right_host_wid{width:130px;}
 .host_l{ width:185px; height:30px;}
 .mar_news{ margin-top:10px;}
 .f_size{ font-size:18px;}
