--- a/user/view/default/vhostproduct/sell.html
+++ b/user/view/default/vhostproduct/sell.html
@@ -34,7 +34,7 @@ function check_register()
 <table id="table_ri" cellpadding="0" cellspacing="1">
 	 <tr><td colspan="2" class="red"><b>购买产品</b></td></tr>
       <tr>
-        <td>产品:</td>
+        <td class="right_host_wid">产品:</td>
         <td>{{$product.name}}</td>
         </tr>
       <tr>
