--- a/user/view/default/vhostproduct/listVhost.html
+++ b/user/view/default/vhostproduct/listVhost.html
@@ -41,7 +41,7 @@
 					<!-- [<a href="?c=vhostproduct&a=impLogin&name={{$row.name}}" target="_blank" >控制面板</a>]
 					-->
 					</td> 
-					<td><a href='?c=vhostproduct&a=impLogin&name={{$row.name}}' target="_blank">{{$row.name}}</a></td>
+					<td><a href='?c=vhostproduct&a=impLogin&name={{$row.name}}' target="{{$target}}">{{$row.name}}</a></td>
 					
 					<td>{{$row.product_name}}</td>
 					<td>{{$row.node}}</td>
