--- a/admin/view/default/mproductorder/addfrom.html
+++ b/admin/view/default/mproductorder/addfrom.html
@@ -1,16 +1,16 @@
 {{include file='common/head.html'}}
 <body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
 <div align="center">
-	<form name='nodeform' action="?c=mproductorder&a=addMproductorder&id={{$mproductorder.id}}" method="post">
-		<div class="head_block tb_wid2">&nbsp;{{if $edit}}修改订单{{else}}增加订单{{/if}}</div>
+	<form name='nodeform' action="?c=mproductorder&a=addMproductorder&id={{$mproductorder.id}}&username={{$mproductorder.username}}" method="post">
+		<div class="head_block tb_wid2" >&nbsp;订单更改</div>
 		<div class="block tb_wid2">
 			<table id="table_2" cellpadding="0" cellspacing="1">
-				{{if $edit}}
+		
 				<tr>
-					<td class="td_bgc right_2">产品组id：</td>
+					<td class="td_bgc right_2">订单ID：</td>
 					<td class="td_bgc right_2 tb_wid2">{{$mproductorder.id}}</td>
 				</tr>
-				{{/if}}
+			
 				
 				<tr>
 					<td class="td_bgc right_2">用户名：</td>
@@ -18,7 +18,7 @@
 				</tr>
 				
 				<tr>
-					<td class="td_bgc right_2">附注：</td>
+					<td class="td_bgc right_2">客户附注：</td>
 					<td class="td_bgc right_2">{{$mproductorder.client_msg}}</td>
 				</tr>
 				
@@ -57,7 +57,7 @@
 				
 				<tr>
 					<td class="td_bgc right_2">状态：</td>
-					<td class="td_bgc right_2">{{$mproductorder.status}}</td>
+					<td class="td_bgc right_2">{{if $mproductorder.status==0}}等待交付{{else}}已交付{{/if}}</td>
 				</tr>
 				
 				
