fix user.mproductorder to mproductorder.ctl

--- a/user/view/default/mproduct/showmproduct.html
+++ b/user/view/default/mproduct/showmproduct.html
@@ -15,7 +15,7 @@
         
 	    <tr>
 	    <td class="td_hg" colspan="2" align="center">
-		<a href="?c=user&a=addMproductorderFrom&mproduct_id={{$mproductinfo.id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a></td>
+		<a href="?c=mproductorder&a=addMproductorderFrom&mproduct_id={{$mproductinfo.id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a></td>
         </tr>
     </table>
 	</div>
