--- a/user/view/default/mproductorder/showmproductorder.html
+++ b/user/view/default/mproductorder/showmproductorder.html
@@ -60,7 +60,7 @@
 				{{/if}}
 				
 				<tr>
-					<td class="td_bgc td_hg" colspan="2" align="center"><a href="?c=user&a=pageListMyMproductorder"><h2>返回</h2></a></td>
+					<td class="td_bgc td_hg" colspan="2" align="center"><a href="?c=mproductorder&a=pageListMyMproductorder"><h2>返回</h2></a></td>
 				</tr>
 	
 			</table>
