--- a/user/view/default/mproductorder/addfrom.html
+++ b/user/view/default/mproductorder/addfrom.html
@@ -3,7 +3,7 @@
 
 
 <div align="center">
-	<form name='nodeform' action="?c=user&a=addMproductorder&product_id={{$id}}" method="post">
+	<form name='nodeform' action="?c=mproductorder&a=addMproductorder&product_id={{$id}}" method="post">
 		<div class="head_block tb_wid2">&nbsp;申请订单</div>
 		<div class="block tb_wid2">
 			<table id="table_2" cellpadding="0" cellspacing="1">
