--- a/user/view/default/mproductorder/addfrom.html
+++ b/user/view/default/mproductorder/addfrom.html
@@ -26,8 +26,11 @@
 				<tr>
 					<td class="td_bgc right_2">购买时限：</td>
 					<td class="td_bgc right_2">
-						{{for $i=0;$i< count($months);$i++}}
-						<input type='radio' name="month" value="{{$months[$i][0]}}"  >{{$months[$i][1]}}&nbsp;{{substr($months[$i][2],0,6)}}元
+						{{if $months[0]}}
+							<input type='radio' name="month" value="{{$months[0][0]}}"  >{{$months[0][1]}}&nbsp;{{substr($months[0][2],0,6)}}元
+						{{/if}}
+						{{for $i=1;$i< 4;$i++}}
+						<input type='radio' name="month" value="{{$months[$i][0]}}"  {{if $months[$i][0]==12}}checked{{/if}}>{{$months[$i][1]}}&nbsp;{{substr($months[$i][2],0,6)}}元
 						{{/for}}
 					</td>
 				</tr>
