--- a/admin/view/default/mproduct/pagelistmproduct.html
+++ b/admin/view/default/mproduct/pagelistmproduct.html
@@ -39,7 +39,7 @@
 					</td>
 					<td class="right_2">{{$row.id}}</td>
 					<td class="right_2">{{$row.name}}</td>
-					<td class="right_2">{{$row.group_id}}</td>
+					<td class="right_2">{{$row.group_name}}</td>
 					<td class="right_2">{{$row.upid}}</td>
 					<td class="right_2">{{$row.price/100}}元</td>
 					<td class="right_2">
