--- a/admin/view/default/mproductgroup/addfrom.html
+++ b/admin/view/default/mproductgroup/addfrom.html
@@ -2,24 +2,24 @@
 <body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
 <div align="center">
 	<form name='nodeform' action="?c=mproductgroup&a=addMproductgroup&id={{$mproductgroup.id}}" method="post">
-		<div class="head_block tb_wid2">&nbsp;{{if $edit}}修改产品{{else}}增加产品{{/if}}</div>
+		<div class="head_block tb_wid2">&nbsp;{{if $edit}}修改业务{{else}}增加业务{{/if}}</div>
 		<div class="block tb_wid2">
 			<table id="table_2" cellpadding="0" cellspacing="1">
 				{{if $edit}}
 				<tr>
-					<td class="td_bgc right_2">产品组id：</td>
+					<td class="td_bgc right_2">业务id：</td>
 					<td class="td_bgc right_2 tb_wid2">{{$mproductgroup.id}}</td>
 				</tr>
 				{{/if}}
 				<tr>
-					<td class="td_bgc right_2">产品组名称：</td>
+					<td class="td_bgc right_2">业务名称：</td>
 					<td class="td_bgc right_2"><input name='name' type='text'  value="{{$mproductgroup.name}}" size="71">
 					</td>
 				</tr>
 				
 				<tr>
-					<td class="td_bgc right_2">产品详情：</td>
-					<td class="td_bgc right_2"><textarea name="describe"  cols='70' rows='35'>{{$mproductgroup.describe}} </textarea>
+					<td class="td_bgc right_2">业务详情：</td>
+					<td class="td_bgc right_2"><textarea name="describe"  cols='70' rows='20'>{{$mproductgroup.describe}} </textarea>
 					</td>
 				</tr>
 				
