--- a/user/view/default/host/index.html
+++ b/user/view/default/host/index.html
@@ -10,235 +10,40 @@
       <td valign="top">
 	 	 <!--右边代码开始-->
 		 	<!--右部虚拟主机调试开始-->
-			{{for $i=0;$i<3;$i++}}
-			<div class="left_box right_host_vh right_main">
-			<table id="table_rr" cellpadding="0" cellspacing="0">
-				<tr>
-					<td colspan="2" align="center" class="right_hg3 color_orange right_hg3"  background="{{$STATIC}}images/r_zj_228.jpg">
-						<b>{{if $products[$i].name}}{{$products[$i].name}}{{else}}暂无{{/if}}</b>
-					</td>
-			  </tr>
-			  <tr><td class="right_h right_wid right_blue" width="60">
-					空间大小：{{if $products[$i].web_quota}}{{$products[$i].web_quota}}M{{else}}暂无{{/if}}
-			  </td></tr>
-			  <tr><td class="right_h right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td></tr>
-			  <tr><td class="right_h right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
-			  <tr><td class="right_h">支持：html,{{$products[$i].templete}}</td></tr>
-			  <tr><td class="right_h">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
-			  <tr>
-				<td class="right_h">价格：<span class="color_red"><b>{{$products[$i].price/100}}</b></span>元/年</td>
-			  </tr>
-			  <tr><td class="right_r right_hg3" colspan="2">
-				<a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}">
-				<img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-				<a href="?c=host&a=showProductFrom&product_id={{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
-			  </tr>
-		 	 </table>
-			</div>
-			{{/for}}
+		 	{{if is_array($products)}}
+		 		{{for $i=0;$i< count($products);$i++}}
+					{{if $i/3==0}}
+						<br>
+					{{/if}}
+					<div class="left_box right_host_vh right_main">
+					<table id="table_rr" cellpadding="0" cellspacing="0">
+						<tr>
+							<td colspan="2" align="center" class="right_hg3 color_orange right_hg3"  background="{{$STATIC}}images/r_zj_228.jpg">
+								<b>{{if $products[$i].name}}{{$products[$i].name}}{{else}}暂无{{/if}}</b>
+							</td>
+					  </tr>
+					  <tr><td class="right_h right_wid right_blue" width="60">
+							空间大小：{{if $products[$i].web_quota}}{{$products[$i].web_quota}}M{{else}}暂无{{/if}}
+					  </td></tr>
+					  <tr><td class="right_h right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td></tr>
+					  <tr><td class="right_h right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
+					  <tr><td class="right_h">支持：html,{{$products[$i].templete}}</td></tr>
+					  <tr><td class="right_h">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
+					  <tr>
+						<td class="right_h">价格：<span class="color_red"><b>{{$products[$i].price/100}}</b></span>元/年</td>
+					  </tr>
+					  <tr><td class="right_r right_hg3" colspan="2">
+						<a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}">
+						<img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+						<a href="?c=host&a=showProductFrom&product_id={{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+					  </tr>
+				 	 </table>
+					</div>
+				{{/for}}
+				{{/if}}
 
 		<!--右部虚拟主机调试结束-->
 	  	
-		
-		
-
-
-		{{if count($products)>3}}
-	  	<!--右部虚拟主机开始-->
-			<div class="right_main">
-				<div class="right_top host_bg_vh">
-					<table id="table_r" cellpadding="0" cellspacing="0">
-						<tr><td height="257" valign="top">
-							<table id="table_r" cellpadding="0" cellspacing="4">
-							
-								<tr>
-								<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-								<td class="right_hg" align="right"><span class="right_r"><a href="?c=host&a=index"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
-								</tr>
-								<tr>
-								<td class="right_hg2" align="center"><b>双线主机</b></td>
-								<td  align="center"><b>双线主机</b></td>
-								<td align="center"><b>双线主机</b></td>
-								</tr>
-								
-								<tr>
-								{{for $i=3;$i<6;$i++}}
-								<td class="right_wid" valign="top">
-									<table id="table_rr" cellpadding="0" cellspacing="0">
-										  <tr>
-											<td colspan="2" align="center" class="right_hg3 color_orange"><b>{{$products[$i].name}}</b></td>
-										  </tr>
-										  <tr>
-										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
-										  </tr>
-										  <tr>
-										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
-										  </tr>
-										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
-										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
-										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
-										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price/100}}</b></span>元/年</td></tr>
-										  <tr><td class="right_r" colspan="2"><a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="?c=host&a=showProductFrom&product_id={{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
-										  </tr>
-									 </table>
-								  </td>	
-								{{/for}}
-							  </tr>
-							  
-							</table>
-						</td></tr>
-					</table>
-				</div>
-				<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-			</div>
-		<!--右部虚拟主机结束-->	
-		{{/if}}
-		
-		{{if count($products)>6}}
-			<!--右部虚拟主机开始-->
-			<div class="right_main">
-				<div class="right_top host_bg_vh">
-					<table id="table_r" cellpadding="0" cellspacing="0">
-						<tr><td height="257" valign="top">
-							<table id="table_r" cellpadding="0" cellspacing="4">
-								<tr>
-									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="?c=host&a=index"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
-								</tr>
-								<tr>
-								  <td class="right_hg2" align="center"><b>双线主机</b></td>
-								  <td  align="center"><b>双线主机</b></td>
-								  <td align="center"><b>双线主机</b></td>
-								</tr>
-								<tr>
-								  {{for $i=6;$i<9;$i++}}
-								<td class="right_wid" valign="top">
-									<table id="table_rr" cellpadding="0" cellspacing="0">
-										  <tr>
-											<td colspan="2" align="center" class="right_hg3 color_orange"><b>{{$products[$i].name}}</b></td>
-										  </tr>
-										  <tr>
-										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
-										  </tr>
-										  <tr>
-										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
-										  </tr>
-										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
-										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
-										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
-										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price/100}}</b></span>元/年</td></tr>
-										  <tr><td class="right_r" colspan="2"><a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="?c=host&a=showProductFrom&product_id={{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
-										  </tr>
-									 </table>
-								  </td>	
-								{{/for}}
-							  </tr>
-							</table>
-						</td></tr>
-					</table>
-				</div>
-				<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-			</div>
-		<!--右部虚拟主机结束-->	
-		{{/if}}
-		
-		{{if count($products)>9}}
-			<!--右部虚拟主机开始-->
-			<div class="right_main">
-				<div class="right_top host_bg_vh">
-					<table id="table_r" cellpadding="0" cellspacing="0">
-						<tr><td height="257" valign="top">
-							<table id="table_r" cellpadding="0" cellspacing="4">
-								<tr>
-									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="?c=host&a=index"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
-								</tr>
-								<tr>
-								  <td class="right_hg2" align="center"><b>双线主机</b></td>
-								  <td  align="center"><b>双线主机</b></td>
-								  <td align="center"><b>双线主机</b></td>
-								</tr>
-								<tr>
-								  {{for $i=9;$i<12;$i++}}
-								<td class="right_wid" valign="top">
-									<table id="table_rr" cellpadding="0" cellspacing="0">
-										  <tr>
-											<td colspan="2" align="center" class="right_hg3 color_orange"><b>{{$products[$i].name}}</b></td>
-										  </tr>
-										  <tr>
-										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
-										  </tr>
-										  <tr>
-										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
-										  </tr>
-										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
-										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
-										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
-										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price/100}}</b></span>元/年</td></tr>
-										  <tr><td class="right_r" colspan="2"><a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="?c=host&a=showProductFrom&product_id={{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
-										  </tr>
-									 </table>
-								  </td>	
-								{{/for}}
-							  </tr>
-							</table>
-						</td></tr>
-					</table>
-				</div>
-				<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-			</div>
-		<!--右部虚拟主机结束-->	
-		{{/if}}
-		{{if count($products)>12}}
-			<!--右部虚拟主机开始-->
-			<div class="right_main">
-				<div class="right_top host_bg_vh">
-					<table id="table_r" cellpadding="0" cellspacing="0">
-						<tr><td height="257" valign="top">
-							<table id="table_r" cellpadding="0" cellspacing="4">
-								<tr>
-									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="?c=host&a=index"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
-								</tr>
-								<tr>
-								  <td class="right_hg2" align="center"><b>双线主机</b></td>
-								  <td  align="center"><b>双线主机</b></td>
-								  <td align="center"><b>双线主机</b></td>
-								</tr>
-								<tr>
-								 {{for $i=12;$i<15;$i++}}
-								<td class="right_wid" valign="top">
-									<table id="table_rr" cellpadding="0" cellspacing="0">
-										  <tr>
-											<td colspan="2" align="center" class="right_hg3 color_orange"><b>{{$products[$i].name}}</b></td>
-										  </tr>
-										  <tr>
-										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
-										  </tr>
-										  <tr>
-										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
-										  </tr>
-										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
-										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
-										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
-										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price/100}}</b></span>元/年</td></tr>
-										  <tr><td class="right_r" colspan="2"><a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="?c=host&a=showProductFrom&product_id={{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
-										  </tr>
-									 </table>
-								  </td>	
-								{{/for}}
-							  </tr>
-							</table>
-						</td></tr>
-					</table>
-				</div>
-			</div>
-			{{/if}}
-		<!--右部虚拟主机结束-->	
 		<!--右边代码结束-->
 	  </td>
     </tr>
