--- a/admin/view/default/mproductorder/pagelistmproductorder.html
+++ b/admin/view/default/mproductorder/pagelistmproductorder.html
@@ -2,6 +2,14 @@
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
 	<div align="center">
+	
+		<div class="mar_top tb_wid5" align="right">
+		<form name='orderform' action="?c=mproductorder&a=pageListMproductorder" method="post">
+			用户名搜索:<input name='username' type='text'><input type='submit' value="提交">
+		</form>
+		
+		</div>
+		</div>
 		<div class="mar_top tb_wid5" align="right">
 			{{if $page>1}}
 			<a href='?c=mproductorder&a=pageListMproductorder&order={{$order}}&&page=0'>首页</a> 
