fix user/left from money.ctl

--- a/admin/view/default/mproductorder/pagelistmproductorder.html
+++ b/admin/view/default/mproductorder/pagelistmproductorder.html
@@ -2,14 +2,15 @@
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
 	<div align="center">
-	
-		<div class="mar_top tb_wid5" align="right">
+		<table>
+		<tr>
+		<div class="mar_top tb_wid5" align="left">
 		<form name='orderform' action="?c=mproductorder&a=pageListMproductorder" method="post">
 			用户名搜索:<input name='username' type='text'><input type='submit' value="提交">
 		</form>
 		
 		</div>
-		</div>
+		
 		<div class="mar_top tb_wid5" align="right">
 			{{if $page>1}}
 			<a href='?c=mproductorder&a=pageListMproductorder&order={{$order}}&&page=0'>首页</a> 
@@ -25,6 +26,8 @@
 			{{$page}}/{{$total_page}}&nbsp;
 			共计{{$count}}记录
 		</div>
+		</tr>
+		</table>
 		<div class="block tb_wid5">
 				<table id="table" border="0" cellpadding="0" cellspacing="1">
 			
