--- a/user/view/default/mproduct/index.html
+++ b/user/view/default/mproduct/index.html
@@ -1,36 +1,19 @@
-<div class="wid_menu_vh">
-  <table id="table_r" cellpadding="0" cellspacing="0" align="center">
-    <tr>
-      <td valign="top">
-      
-      
-	 	 <!--右边代码开始-->
-		 	<!--右部虚拟主机调试开始-->
-			{{for $i=0;$i<3;$i++}}
-			<div class="left_box right_host_vh right_main">
-			<table id="table_rr" cellpadding="0" cellspacing="0">
-				<tr>
-					<td colspan="2" align="center" class="right_hg3 color_orange right_hg3"  background="{{$STATIC}}images/r_zj_228.jpg">
-						<b>{{if $products[$i].name}}{{$products[$i].name}}{{else}}暂无{{/if}}</b>
-					</td>
-			  </tr>
-			  <tr><td class="right_h right_wid right_blue" width="60">
-					空间大小：{{if $products[$i].web_quota}}{{$products[$i].web_quota}}M{{else}}暂无{{/if}}
-			  </td></tr>
-			  <tr><td class="right_h right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td></tr>
-			  <tr><td class="right_h right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
-			  <tr><td class="right_h">支持：html,{{$products[$i].templete}}</td></tr>
-			  <tr><td class="right_h">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
-			  <tr>
-				<td class="right_h">价格：<span class="color_red"><b>{{$products[$i].price/100}}</b></span>元/年</td>
-			  </tr>
-			  <tr><td class="right_r right_hg3" colspan="2">
-				<a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}">
-				<img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-				<a href="?c=host&a=showProductFrom&product_id={{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
-			  </tr>
-		 	 </table>
-			</div>
-			{{/for}}
+	<div >
+		<div >
+			{{if is_array($mproducts)}}
+				{{for $i=0;$i< count($mproducts);$i++}}
+				<table style="width:750px;height:50px; background-color:white" border='1px' >
+					<tr >
+						<td style="width:15%;padding:5px;"><a href='?c=mproduct&a=showMproductFrom&id={{$mproducts[$i].id}}'>{{$mproducts[$i].name}}</a><br><br>{{$mproducts[$i].price}}&nbsp;元/年<br><br>点击购买</td>
+						<td style="width:85%;padding:15px;">{{$mproducts[$i].describe}}</td>
+			  		<tr>
+			  			</table>
+			  			<br>
+			  	{{/for}}
+			{{/if}}
+		  	
+		</div>
+	</div>
+			
 
 	
