--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -48,7 +48,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .left_bg{background-image:url({{$STATIC}}images/ne_1.jpg); background-repeat:repeat-x; width:74px; margin-top:7px; margin-left:10px; height:26px;}
 .left_vh{background-image:url({{$STATIC}}images/he_cio.jpg); background-repeat:repeat-x; width:201px; margin-top:0px; margin-left:0px; height:32px;}
 .left_reg{background-image:url({{$STATIC}}images/reg1.jpg); background-repeat:repeat-x; width:199px; margin-top:0px; margin-left:0px; height:396px;}
-.left_host{background-image:url({{$STATIC}}images/host_cio.jpg); background-repeat:repeat-x; width:201px; margin-top:0px; margin-left:0px; height:32px;}
+.left_host{background-image:url({{$STATIC}}images/host_cio2.jpg); background-repeat:repeat-x; width:201px; margin-top:0px; margin-left:0px; height:32px;}
 .left_bg_gong{background-image:url({{$STATIC}}images/box_tl4.jpg); background-repeat:repeat-x; width:74px; margin-top:5px; margin-left:140px; height:24px;}
 .left_help_img{background-image:url({{$STATIC}}images/help.jpg); background-repeat:repeat-x; width:74px; margin-top:2px; margin-bottom:5px; margin-left:10px; height:26px;}
 .left_help_img2{background-image:url({{$STATIC}}images/rightmenu_titlebg.gif); background-repeat:repeat-x; width:200px; margin-top:2px; margin-bottom:5px; margin-left:0px; height:30px;}
