--- a/user/view/default/mproductorder/addfrom.html
+++ b/user/view/default/mproductorder/addfrom.html
@@ -4,9 +4,9 @@
 
 <div align="center">
 	<form name='nodeform' action="?c=mproductorder&a=addMproductorder&product_id={{$id}}" method="post">
-		<div class="head_block tb_wid2">&nbsp;申请订单</div>
+		<div class="wid_ri r_mar" align="center"><h3>订单申请</h3></div>
 		<div class="block tb_wid2">
-			<table id="table_2" cellpadding="0" cellspacing="1">
+			<table id="table_ri" cellpadding="0" cellspacing="1">
 			
 				<tr>
 					<td class="td_bgc right_2">产品名称：</td>
@@ -18,7 +18,7 @@
 				<tr>
 					<td class="td_bgc right_2">我的补充说明：</td>
 					<td class="td_bgc right_2">
-						<textarea name='client_msg' cols='40' rows='5'>{{$mproductorder.client_msg}}</textarea>
+						<textarea name='client_msg' cols='40' rows='13'>{{$mproductorder.client_msg}}</textarea>
 					</td>
 				</tr>
 				
